force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/RS_serviceRecoverymatrix__mdt.object-meta.xml
<CustomObject>
    <label>RS_serviceRecoverymatrix</label>
    <pluralLabel>RS_serviceRecoverymatrix</pluralLabel>
</CustomObject>