force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/Case_Open_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Days__c</fullName>
    <inlineHelpText>Threshold timespan for open case(days)</inlineHelpText>
    <label>Threshold timespan for open case(days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>