force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/Excessive_no_of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Excessive_no_of_Interaction__c</fullName>
    <inlineHelpText>Threshold # of interaction tied to an open case</inlineHelpText>
    <label># of interaction tied to an open case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>