force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/No_of_Cases_with_negative_sentiments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cases_with_negative_sentiments__c</fullName>
    <inlineHelpText>Threshold # of cases with -ve sentiments</inlineHelpText>
    <label>Threshold # of cases with -ve sentiment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>