force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/No_of_Interactions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Interactions__c</fullName>
    <inlineHelpText>Threshold interactions for an open case</inlineHelpText>
    <label>Threshold interactions for an open case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>