force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/No_of_Last_negative_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Last_negative_Sentiments__c</fullName>
    <inlineHelpText># of last consecutive -ve conversations</inlineHelpText>
    <label># of last consecutive -ve conversations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>