force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/No_of_Repeated_Cases__c.field-meta.xml
<CustomField>
    <fullName>No_of_Repeated_Cases__c</fullName>
    <inlineHelpText>Threshold # of repeated cases for same issue</inlineHelpText>
    <label># of repeated cases for same issue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>