force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/No_of_ve_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>No_of_ve_Sentiments__c</fullName>
    <inlineHelpText>Threshold # of -ve sentiments per case</inlineHelpText>
    <label>Threshold # of -ve sentiments per case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>