force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/Short_Time_for_Repeated_Cases_Days__c.field-meta.xml
<CustomField>
    <fullName>Short_Time_for_Repeated_Cases_Days__c</fullName>
    <inlineHelpText>Timeframe within which issue is repeated(Days)</inlineHelpText>
    <label>Timeframe for repeated issue(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>