force-app/main/default/objects/RS_serviceRecoverymatrix__mdt/fields/Time_Span_for_Negative_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>Time_Span_for_Negative_Sentiments__c</fullName>
    <inlineHelpText>Timeframe for multiple cases with -ve sentiment check (Days)</inlineHelpText>
    <label>Timeframe for cases(-ve sentiment)(Day)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>